--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         background: #94a3b8; 
       }
     </style>
+    <!-- Google Identity Services -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   <script type="importmap">
 {
   "imports": {
